--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,5 @@ pyrightconfig.json
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+# Test script that I use to see what sticks - not good testing practice but good for exploration
+test_script.py
